[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Popups/PopupBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Popups/InventoryPopup.gd" type="Script" id=2]
[ext_resource path="res://UI/Elements/BronzeBorderPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Popups/Addons/MoneyDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Popups/Addons/ItemListDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Popups/Addons/EquipDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Popups/Addons/ItemInfo.tscn" type="PackedScene" id=7]

[node name="InventoryPopup" instance=ExtResource( 1 )]

script = ExtResource( 2 )
InventoryPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Inventory")
EquipDisplayPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/EquipDisplay")
ItemInfoPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo")
MoneyDisplayPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer/MoneyDisplay")
ContentContainerPath = NodePath("Content/CenterContainer/BronzeBorderPanel/VBoxContainer")

[node name="CenterContainer" type="CenterContainer" parent="Content" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 662.0
margin_bottom = 386.0
rect_min_size = Vector2( 1024, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="BronzeBorderPanel" parent="Content/CenterContainer" index="0" instance=ExtResource( 3 )]

margin_left = 181.0
margin_top = 101.0
margin_right = 843.0
margin_bottom = 498.0

[node name="VBoxContainer" type="VBoxContainer" parent="Content/CenterContainer/BronzeBorderPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 35.0
margin_right = 627.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 15
alignment = 0

[node name="MoneyDisplay" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer" index="0" instance=ExtResource( 4 )]

margin_left = 267.0
margin_right = 324.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 31.0
margin_right = 592.0
margin_bottom = 327.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Inventory" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 5 )]

margin_bottom = 296.0

[node name="EquipDisplay" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 6 )]

margin_left = 300.0
margin_right = 400.0
margin_bottom = 296.0
_sections_unfolded = [ "Rect", "custom_styles" ]

[node name="ItemInfo" parent="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer" index="2" instance=ExtResource( 7 )]

margin_left = 404.0
margin_right = 592.0

[connection signal="item_activated" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Inventory" to="." method="_on_item_activated"]

[connection signal="item_rmb_selected" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Inventory" to="." method="_on_item_rmb_selected"]

[connection signal="item_selected" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/Inventory" to="." method="_on_item_selected"]

[connection signal="item_activated" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/EquipDisplay" to="." method="_on_item_unequiped"]

[connection signal="item_selected" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/EquipDisplay" to="." method="_on_equip_selected"]

[connection signal="item_equiped" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo" to="." method="_on_item_equiped"]

[connection signal="item_unequiped" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo" to="." method="_on_item_unequiped"]

[connection signal="item_used" from="Content/CenterContainer/BronzeBorderPanel/VBoxContainer/HBoxContainer/ItemInfo" to="." method="_on_item_used"]


